--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "php": ">=5.3.2",
     "symfony/framework-bundle": "~2.3",
     "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-    "doctrine/orm": "^2.5",
+    "doctrine/orm": "~2.4",
     "doctrine/doctrine-bundle": "^1.6",
     "greenlion/php-sql-parser": "~4.0"
   },
