--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   ],
   "require": {
     "php": ">=5.3.2",
-    "symfony/framework-bundle": "~2.3",
+    "symfony/framework-bundle": "~2.3|~3.0",
     "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
     "doctrine/orm": "~2.4",
     "doctrine/doctrine-bundle": "^1.6",
