--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   ],
   "require": {
     "php": ">=5.3.2",
-    "symfony/framework-bundle": "~2.3|~3.0",
+    "symfony/framework-bundle": "2.3.*|~2.7|~3.0",
     "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
     "doctrine/orm": "~2.4",
     "doctrine/doctrine-bundle": "^1.6",
@@ -21,10 +21,9 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4.6",
-    "symfony-cmf/testing": "1.3.*",
-    "doctrine/phpcr-odm": "~1.3",
+    "symfony-cmf/testing": "~1.3",
     "doctrine/doctrine-fixtures-bundle": "~2.2",
-    "liip/functional-test-bundle": "~1.2"
+    "liip/functional-test-bundle": "~1.1"
   },
   "autoload": {
     "psr-4": { "UniqueLibs\\RequestToQueryBuilderBundle\\": "src/" }
